champlain-view: Add valid bouding-box check for champlain_view_set_world

https://bugzilla.gnome.org/show_bug.cgi?id=764433